--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coding",
     "dev"
   ],
-  "author": "Ryan Fitzgerald",
+  "author": "Alexander Lelidis",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
